sfdxsrc/genericDataTable/objects/Data_Table_Content__mdt/Data_Table_Content__mdt.object-meta.xml
<CustomObject>
    <description>Holds the columns we want to show on the data table.</description>
    <label>Data Table Content</label>
    <pluralLabel>Data Table Contents</pluralLabel>
</CustomObject>