sfdxsrc/genericDataTable/objects/Data_Table_Content__mdt/fields/Data_Table__c.field-meta.xml
<CustomField>
    <fullName>Data_Table__c</fullName>
    <description>Holds the parent Data Table name.</description>
    <label>Data Table</label>
    <referenceTo>Data_Table__mdt</referenceTo>
    <relationshipLabel>Data Table Contents</relationshipLabel>
    <relationshipName>Data_Table_Contents</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>