sfdxsrc/genericDataTable/objects/Data_Table_Content__mdt/fields/DataType__c.field-meta.xml
<CustomField>
    <fullName>DataType__c</fullName>
    <description>Holds data type of field to be shown on the data table.</description>
    <label>DataType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Currency</fullName>
                <default>true</default>
                <label>Currency</label>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>date-local</fullName>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>number</fullName>
            </value>
            <value>
                <fullName>percent</fullName>
            </value>
            <value>
                <fullName>phone</fullName>
            </value>
            <value>
                <fullName>text</fullName>
            </value>
            <value>
                <fullName>url</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>