sfdxsrc/genericDataTable/objects/Data_Table_Content__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>Holds API Name of Field.</description>
    <label>Field API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>