sfdxsrc/genericDataTable/objects/Data_Table_Content__mdt/fields/URL_Label_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>URL_Label_Field_API_Name__c</fullName>
    <description>Holds the API name of hyperlink label.</description>
    <inlineHelpText>API Name of the field which comes on the label of Hyperlink.</inlineHelpText>
    <label>URL Label Field API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>