sfdxsrc/genericDataTable/objects/Data_Table_Content__mdt/fields/URL_Target_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>URL_Target_Field_API_Name__c</fullName>
    <description>Holds the API name of hyperlink target.</description>
    <inlineHelpText>API Name of the field which indicates the link&apos;s destination.</inlineHelpText>
    <label>URL Target Field API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>