sfdxsrc/genericDataTable/objects/Data_Table_Content__mdt/validationRules/URL_Label_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>URL_Label_is_Required</fullName>
    <active>true</active>
    <description>The URL Label field is required when data type = URL</description>
    <errorConditionFormula>AND(ISPICKVAL( DataType__c , &quot;url&quot;), ISBLANK(URL_Label_Field_API_Name__c))</errorConditionFormula>
    <errorDisplayField>URL_Label_Field_API_Name__c</errorDisplayField>
    <errorMessage>URL Label required.</errorMessage>
</ValidationRule>